# beprox

./: .gitignore  CHANGELOG.md  README.md  package.json
.github/workflows/: deploy-docs.yml  release.yml
docs/: index.md  roadmap.md
docs/.vitepress/: config.mts
docs/guide/: getting-started.md
docs/public/: robots.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/routes/: +page.svelte
